<?xml version="1.0" encoding="utf-8"?>

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sortBy">

    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdbtn_date"
        android:text="@string/Date"
        android:textSize="20sp"
        android:onClick="onRadioClick"
        android:contentDescription="@string/adId" />

    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdbtn_name"
        android:text="@string/Name"
        android:textSize="20sp"
        android:onClick="onRadioClick"
        android:contentDescription="@string/name" />

    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdbtn_price"
        android:text="@string/Price"
        android:textSize="20sp"
        android:onClick="onRadioClick"
        android:contentDescription="@string/askingPrice" />

    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdbtn_type"
        android:text="@string/ItemType"
        android:textSize="20sp"
        android:onClick="onRadioClick"
        android:contentDescription="@string/adItem" />

</RadioGroup>